# Command-Line-Interpreter

CommandLineInterpreter/: InputOutput.h  Interpreter.cpp  Interpreter.h  Terminal.cpp
CommandLineInterpreter/Commands/: AbstractCommands.h  BatchCommand.cpp  BatchCommand.h  DateCommand.h  EchoCommand.cpp  HeadCommand.h  PromptCommand.cpp  RmCommand.cpp  RmCommand.h  TimeCommand.cpp  TimeCommand.h  TouchCommand.h  WCCommand.cpp
CommandLineInterpreter/IO/: ConsoleStream.cpp  FileStream.cpp  OutputStream.cpp  OutputStream.h
projekat/: CMakeLists.txt  Terminal.h  main.cpp
projekat/Commands/: AbstractCommands.cpp  DateCommand.cpp  EchoCommand.h  HeadCommand.cpp  PromptCommand.h  TouchCommand.cpp  TruncateCommand.cpp  TruncateCommand.h  WCCommand.h
projekat/IO/: ConsoleStream.h  FileStream.h  StringEditor.h
